# rusty-nix

./: .gitignore  Cargo.toml  README.md  flake.nix  nix.conf
.github/workflows/: build.yml
daemon/: Cargo.toml
daemon/src/: error.rs  lib.rs  main.rs
libstore/: Cargo.toml
libstore/src/: lib.rs  reader.rs
libstore/src/archive/: mod.rs
libstore/src/connection/: logger.rs  mod.rs
libstore/src/crypto/: mod.rs
libstore/src/error/: mod.rs
libstore/src/gc/: lock.rs
libstore/src/plugin/: mod.rs
libstore/src/source/: logger.rs  mod.rs
libstore/src/store/: hash.rs  local_store.rs  mock_store.rs  mod.rs  path.rs  protocol.rs  store_template.rs  valid_path.rs
libstore/src/store/binary/: mod.rs
libstore/src/store/hash/: base32.rs
libstore/tests/: README.md  gcc.drv
libutil/: Cargo.toml
libutil/src/: lib.rs
libutil/src/config/: error.rs  mod.rs
libutil/src/error/: mod.rs
