[package]
name = "nix-daemon"
version = "0.1.0"
authors = ["Finn Behrens <me@kloenk.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = [ "color" ]
color = [ "clap/color" ]

[dependencies]
clap = "2.33"
log = "0.4"
env_logger = "0.6"
libstore = { path = "../libstore" }


[[bin]]
name = "nix-daemon"
path = "src/main.rs"