[package]
name = "libstore"
version = "0.1.0"
authors = ["Finn Behrens <me@kloenk.de>"]
edition = "2018"
license = "LGPL-2.1-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
custom_error = "1.7"
tokio = { version = "0.2.21", features = [ "full" ] }
log = "*"
futures = "*"
byteorder = "1"