[package]
name = "libstore"
version = "0.1.0"
authors = ["Finn Behrens <me@kloenk.de>"]
edition = "2018"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
custom_error = "1.7"
tokio = { version = "0.2.21", features = [ "full" ] }
log = "*"
futures = "*"
byteorder = "1"
chrono = "0.4"
lru_time_cache = "*"
rusqlite = "*"
sha2 = "*"
libc = "*"
ring = { version = "*", features = [ "std", "dev_urandom_fallback" ] }
base64 = "*"
lazy_static = "*"

libutil = { path = "../libutil" }
