[package]
name = "libstore"
version = "0.1.0"
authors = ["Finn Behrens <me@kloenk.de>"]
edition = "2018"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
custom_error = "1.7"
tokio = { version = "0.3", features = [ "full" ] }
log = "0.4"
futures = "0.3"
byteorder = "1"
chrono = "0.4"
lru_time_cache = "0.11"
rusqlite = "0.24"
sha2 = "0.9"
libc = "0.2"
ring = { version = "0.16", features = [ "std", "dev_urandom_fallback" ] }
lazy_static = "1.4"
data-encoding = "2.3"
nix = "0.19"

libutil = { path = "../libutil" }


[dev-dependencies]
env_logger = "0.8"
