[package]
name = "libutil"
version = "0.1.0"
authors = ["Finn Behrens <me@kloenk.de>"]
edition = "2018"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
